# LOCAL.IA.GENERATED_COMPTE_RENDU

./: .coverage  .gitignore  .pre-commit-config.yaml  BATCH_IMPLEMENTATION_SUMMARY.md  BATCH_QUICKSTART.md  Makefile  PRODUCTION_GATE_RESUME.md  QUICKSTART.md  README.md  README_SPRINT3.md  RESUME_COMPLET.md  RHPRO_QUICKSTART.md  SPRINT3_SUMMARY.md  VERSION  app.py  demo_batch.py  demo_client_finder.py  demo_production_gate.py  demo_rhpro_parse.py  demo_training_pipeline.py  local_llm_rapport.py  pyproject.toml  rapport_orchestrator.py  requirements-dev.txt  requirements.txt  show_provenance.py  start_all.sh  streamlit_app.py  test_api_filebrowser.py
CLIENTS/: build_context.py  extract_sources.py  generate_fields.py  render_docx.py
backend/: __init__.py  config.py  main.py  requirements.txt
core/: __init__.py  avs.py  context.py  docx_branding.py  docx_logo_replace.py  errors.py  export.py  extract.py  field_specs.py  generate.py  instructions.md  location_date.py  logger.py  logo_processing.py  models.py  render.py  template_fields.py  validation.py
data/: .gitkeep
docs/: BATCH_PARSER_GUIDE.md  DATASET_MODE_GUIDE.md  FILE_BROWSER_API.md  Instruction_logo.md  PIPELINE_NORMALIZATION.md  PRODUCTION_GATE_IMPLEMENTATION_COMPLETE.md  PRODUCTION_GATE_PROFILES.md  PRODUCTION_GATE_SCORING_V2.md  RHPRO_IMPLEMENTATION_SUMMARY.md  RHPRO_PARSER_README.md  RHPRO_STEP6_COMPLETE.md  RHPRO_STEP6_IMPROVEMENTS.md  WINDOWS_DEPLOYMENT.md  dependencies.md  instructions_Steap2.md  sprint1-summary.md  sprint2-guide.md  sprint2-report.md
frontend/: .gitignore  package-lock.json  package.json
pages_streamlit/: __init__.py  batch_parser.py  client_report_generator.py  training.py
schemas/: normalized.rhpro_v1.json
script_ai/: __init__.py
scripts/: __init__.py  create_sample_bilan.py  create_synthetic_sample.py  demo.sh  start-all.sh  start_worker.py  stop.sh  tail-logs.sh
src/: __init__.py
tests/: conftest.py  requirements.txt  test_api.py  test_audio_extraction_ingested_audio_txt.py  test_audio_rag.py  test_avs.py  test_batch_samples.py  test_context.py  test_coverage_boost.py  test_docx_logo_replacement.py  test_errors.py  test_export.py  test_extract.py  test_field_specs.py  test_final_coverage.py  test_generate.py  test_generate_coverage.py  test_generate_extra.py  test_llm_functions.py  test_location_date.py  (+12 more)
(+54 files in other folders)
